[gd_scene load_steps=10 format=3 uid="uid://bp4ct1on552uj"]

[ext_resource type="Script" path="res://scripts/level_3.gd" id="1_lyd6q"]
[ext_resource type="PackedScene" uid="uid://q5v5cu784eqv" path="res://scenes/prefab/escape_button.tscn" id="2_ax16b"]
[ext_resource type="PackedScene" uid="uid://crjqsjwl2q87i" path="res://scenes/prefab/gate.tscn" id="3_usv5y"]
[ext_resource type="PackedScene" uid="uid://ctmp7o4ijahp2" path="res://scenes/prefab/player.tscn" id="4_2wir1"]
[ext_resource type="PackedScene" uid="uid://ds5xwtjbwixmf" path="res://scenes/prefab/fallout_zone.tscn" id="5_vu28r"]
[ext_resource type="PackedScene" uid="uid://bb80ejp6p3y0w" path="res://scenes/prefab/side_wall.tscn" id="6_6jdme"]
[ext_resource type="PackedScene" uid="uid://wi1yeq0iuogq" path="res://scenes/prefab/platform_parent.tscn" id="7_n6tkr"]
[ext_resource type="PackedScene" uid="uid://c5temua38dqbd" path="res://scenes/prefab/detect_area.tscn" id="8_5fk5t"]
[ext_resource type="PackedScene" path="res://scenes/prefab/settings_button.tscn" id="9_3x8n4"]

[node name="Level_03" type="Node2D"]
script = ExtResource("1_lyd6q")

[node name="EscapeButton" parent="." instance=ExtResource("2_ax16b")]

[node name="Gate" parent="." instance=ExtResource("3_usv5y")]
position = Vector2(1122, 501)

[node name="Player" parent="." instance=ExtResource("4_2wir1")]
position = Vector2(17, 501)

[node name="FalloutZone" parent="." instance=ExtResource("5_vu28r")]
position = Vector2(576, 684)

[node name="SideWall" parent="." instance=ExtResource("6_6jdme")]
position = Vector2(-17, 338)

[node name="SideWall2" parent="." instance=ExtResource("6_6jdme")]
position = Vector2(1169, 338)

[node name="platform-parent" parent="." instance=ExtResource("7_n6tkr")]
position = Vector2(90, 546)
scale = Vector2(3, 1)

[node name="platform-parent2" parent="." instance=ExtResource("7_n6tkr")]
position = Vector2(352, 546)
scale = Vector2(2, 1)

[node name="DetectArea" parent="." instance=ExtResource("8_5fk5t")]
position = Vector2(309, 435)

[node name="platform-parent3" parent="." instance=ExtResource("7_n6tkr")]
position = Vector2(397, 546)
scale = Vector2(0.5, 1)

[node name="DetectArea4" parent="." instance=ExtResource("8_5fk5t")]
position = Vector2(534, 435)

[node name="platform-parent4" parent="." instance=ExtResource("7_n6tkr")]
position = Vector2(663, 546)
scale = Vector2(6, 1)

[node name="DetectArea2" parent="." instance=ExtResource("8_5fk5t")]
position = Vector2(456, 435)

[node name="platform-parent5" parent="." instance=ExtResource("7_n6tkr")]
position = Vector2(492, 546)
scale = Vector2(0.3, 1)

[node name="platform-parent6" parent="." instance=ExtResource("7_n6tkr")]
position = Vector2(858, 546)
scale = Vector2(0.5, 1)

[node name="DetectArea3" parent="." instance=ExtResource("8_5fk5t")]
position = Vector2(873, 435)

[node name="platform-parent7" parent="." instance=ExtResource("7_n6tkr")]
position = Vector2(903, 546)

[node name="platform-parent8" parent="." instance=ExtResource("7_n6tkr")]
position = Vector2(1044, 546)
scale = Vector2(3.7, 1)

[node name="SettingsButton" parent="." instance=ExtResource("9_3x8n4")]
offset_left = 1080.0
offset_top = 10.0
offset_right = 1205.0
offset_bottom = 135.0

[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="body_entered" from="DetectArea4" to="." method="_on_detect_area_4_body_entered"]
[connection signal="body_entered" from="DetectArea2" to="." method="_on_detect_area_2_body_entered"]
[connection signal="body_entered" from="DetectArea3" to="." method="_on_detect_area_3_body_entered"]
